--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link href="
+    https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
+    " rel="stylesheet">
 </head>
 
 <body>
