--- a/index.html
+++ b/index.html
@@ -6,44 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
+    <link href="
+        https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
+        " rel="stylesheet">
     <link rel="stylesheet" href="./css/styless.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-    <link href="
-    https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
-    " rel="stylesheet">
 </head>
 
 <body>
     <!-- header section -->
-    <header>
-        <nav>
-            <a class="header-logo link" href="index.html">Web<span class="header-second-logo">Studio</span></a>
-            <ul class="list">
-                <li>
-                    <a class="header-bar link" href="./index.html">Studio</a>
-                </li>
-                <li class="header-studio">
-                    <a class="header-bar link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="header-studio">
-                    <a class="header-bar link" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="header-address">
-            <ul class="list">
-                <li class="link">
-                    <a class="link header-address-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="link">
-                    <a class="link header-address-list" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
+    <header class="header-section">
+        <div class="header-container container">
+            <nav class="nav-container">
+                <a class="header-logo link" href="index.html">Web<span class="header-second-logo">Studio</span></a>
+                <ul class="menu-container list">
+                    <li>
+                        <a class="header-bar link" href="./index.html">Studio</a>
+                    </li>
+                    <li class="header-studio">
+                        <a class="header-bar link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="header-studio">
+                        <a class="header-bar link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="header-address">
+                <ul class="address-container list">
+                    <li class="link">
+                        <a class="link header-address-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="link">
+                        <a class="link header-address-list" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
 
-        </address>
+            </address>
+        </div>
     </header>
     <!-- main section -->
     <main>
