hero section ready

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     <main>
         <!-- hero section -->
         <section class="hero-section">
-            <h1 class="hero-header">Effective Solutions for Your Business</h1>
-            <button class="bttn-hero" type="button">Order Service</button>
+            <div class="container">
+                <h1 class="hero-header">Effective Solutions for Your Business</h1>
+                <button class="bttn-hero" type="button">Order Service</button>
+            </div>
         </section>
         <!-- features -->
         <section>
