--- a/index.html
+++ b/index.html
@@ -55,38 +55,42 @@
             </div>
         </section>
         <!-- features -->
-        <section>
-            <h2 hidden>features</h2>
-            <ul class="list">
-                <li>
-                    <h3 class="features-heading">Strategy</h3>
-                    <p class="features-text">
-                        Our goal is to identify the business problem to walk away with the perfect and creative
-                        solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="features-heading">Punctuality</h3>
-                    <p class="features-text">
-                        Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="features-heading">Diligence</h3>
-                    <p class="features-text">
-                        Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="features-heading">Technologies</h3>
-                    <p class="features-text">
-                        Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
-                    </p>
-                </li>
-            </ul>
+        <section class="features-section">
+            <div class="container">
+                <h2 class="visually-hidden">features</h2>
+                <ul class="features-container list">
+                    <li class="features-item">
+                        <h3 class="features-heading">Strategy</h3>
+                        <p class="features-text">
+                            Our goal is to identify the business problem to walk away with the perfect and creative
+                            solution.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="features-heading">Punctuality</h3>
+                        <p class="features-text">
+                            Bring the key message to the brand's audience for the best price within the shortest
+                            possible
+                            time.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="features-heading">Diligence</h3>
+                        <p class="features-text">
+                            Research and confirm brands that present the strongest digital growth opportunities and
+                            minimize
+                            risk.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="features-heading">Technologies</h3>
+                        <p class="features-text">
+                            Design practice focused on digital experiences. We bring forth a deep passion for
+                            problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- what are we doing -->
         <section>
