--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             solution.
                         </p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-heading">Punctuality</h3>
                         <p class="features-text">
                             Bring the key message to the brand's audience for the best price within the shortest
@@ -74,7 +74,7 @@
                             time.
                         </p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-heading">Diligence</h3>
                         <p class="features-text">
                             Research and confirm brands that present the strongest digital growth opportunities and
@@ -82,7 +82,7 @@
                             risk.
                         </p>
                     </li>
-                    <li>
+                    <li class="features-item">
                         <h3 class="features-heading">Technologies</h3>
                         <p class="features-text">
                             Design practice focused on digital experiences. We bring forth a deep passion for
