3rd section ready

--- a/index.html
+++ b/index.html
@@ -93,19 +93,21 @@
             </div>
         </section>
         <!-- what are we doing -->
-        <section>
-            <h2 class="page-header">What are we doing</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/wawd/desktop.jpg" alt="desktop profiles" width="360" />
-                </li>
-                <li>
-                    <img src="./images/wawd/mobilechats.jpg" alt="mobile chatting" width="360" />
-                </li>
-                <li>
-                    <img src="./images/wawd/phoneweb.jpg" alt="phone web" width="360" />
-                </li>
-            </ul>
+        <section class="doing-section">
+            <div class="container">
+                <h2 class="page-header">What are we doing</h2>
+                <ul class="doing-container list">
+                    <li class="doing-item">
+                        <img src="./images/wawd/desktop.jpg" alt="desktop profiles" width="360" />
+                    </li>
+                    <li>
+                        <img src="./images/wawd/mobilechats.jpg" alt="mobile chatting" width="360" />
+                    </li>
+                    <li>
+                        <img src="./images/wawd/phoneweb.jpg" alt="phone web" width="360" />
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- our team -->
         <section class="team-section">
