--- a/index.html
+++ b/index.html
@@ -111,45 +111,51 @@
         </section>
         <!-- our team -->
         <section class="team-section">
-            <h2 class="team-header">Our Team</h2>
-            <ul class="list">
-                <li class="personal-item">
-                    <img src="./images/ourteam/mark.jpg" alt="Mark Guerrero" width="264" />
-                    <h3 class="name-header">Mark Guerrero</h3>
-                    <p class="work-position">
-                        Product Designer
-                    </p>
-                </li>
-                <li class="personal-item">
-                    <img src="./images/ourteam/tom.jpg" alt="Tom Ford" width="264" />
-                    <h3 class="name-header">Tom Ford</h3>
-                    <p class="work-position">
-                        Frontend Developer
-                    </p>
-                </li>
-                <li class="personal-item">
-                    <img src="./images/ourteam/camila.jpg" alt="Camila Garcia" width="264" />
-                    <h3 class="name-header">Camila Garcia</h3>
-                    <p class="work-position">
-                        Marketing
-                    </p>
-                </li>
-                <li class="personal-item">
-                    <img src="./images/ourteam/daniel.jpg" alt="Daniel Wilson" width="264" />
-                    <h3 class="name-header">Daniel Wilson</h3>
-                    <p class="work-position">
-                        UI Designer
-                    </p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="team-header">Our Team</h2>
+                <ul class="team-container list">
+                    <li class="personal-item">
+                        <div class="personal-container">
+                            <img src="./images/ourteam/mark.jpg" alt="Mark Guerrero" width="264" />
+                            <h3 class="name-header">Mark Guerrero</h3>
+                            <p class="work-position">
+                                Product Designer
+                            </p>
+                        </div>
+                    </li>
+                    <li class="personal-item">
+                        <img src="./images/ourteam/tom.jpg" alt="Tom Ford" width="264" />
+                        <h3 class="name-header">Tom Ford</h3>
+                        <p class="work-position">
+                            Frontend Developer
+                        </p>
+                    </li>
+                    <li class="personal-item">
+                        <img src="./images/ourteam/camila.jpg" alt="Camila Garcia" width="264" />
+                        <h3 class="name-header">Camila Garcia</h3>
+                        <p class="work-position">
+                            Marketing
+                        </p>
+                    </li>
+                    <li class="personal-item">
+                        <img src="./images/ourteam/daniel.jpg" alt="Daniel Wilson" width="264" />
+                        <h3 class="name-header">Daniel Wilson</h3>
+                        <p class="work-position">
+                            UI Designer
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- footer section -->
     <footer class="footer-options">
-        <a class="footer-logo link" href="./index.html">Web<span class="logo-item">Studio</span></a>
-        <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+        <div class="container">
+            <a class="footer-logo link" href="./index.html">Web<span class="logo-item">Studio</span></a>
+            <p class="footer-text">
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
+        </div>
     </footer>
 </body>
 
