--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                     <li class="doing-item">
                         <img src="./images/wawd/desktop.jpg" alt="desktop profiles" width="360" />
                     </li>
-                    <li>
+                    <li class="doing-item">
                         <img src="./images/wawd/mobilechats.jpg" alt="mobile chatting" width="360" />
                     </li>
-                    <li>
+                    <li class="doing-item">
                         <img src="./images/wawd/phoneweb.jpg" alt="phone web" width="360" />
                     </li>
                 </ul>
