--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             <nav class="nav-container">
                 <a class="header-logo link" href="index.html">Web<span class="header-second-logo">Studio</span></a>
                 <ul class="menu-container list">
-                    <li>
+                    <li class="header-studio">
                         <a class="header-bar link" href="./index.html">Studio</a>
                     </li>
                     <li class="header-studio">
