update for portfolio

--- a/index.html
+++ b/index.html
@@ -125,24 +125,30 @@
                     </li>
                     <li class="personal-item">
                         <img src="./images/ourteam/tom.jpg" alt="Tom Ford" width="264" />
-                        <h3 class="name-header">Tom Ford</h3>
-                        <p class="work-position">
-                            Frontend Developer
-                        </p>
+                        <div class="position-item">
+                            <h3 class="name-header">Tom Ford</h3>
+                            <p class="work-position">
+                                Frontend Developer
+                            </p>
+                        </div>
                     </li>
                     <li class="personal-item">
                         <img src="./images/ourteam/camila.jpg" alt="Camila Garcia" width="264" />
-                        <h3 class="name-header">Camila Garcia</h3>
-                        <p class="work-position">
-                            Marketing
-                        </p>
+                        <div class="position-item">
+                            <h3 class="name-header">Camila Garcia</h3>
+                            <p class="work-position">
+                                Marketing
+                            </p>
+                        </div>
                     </li>
                     <li class="personal-item">
                         <img src="./images/ourteam/daniel.jpg" alt="Daniel Wilson" width="264" />
-                        <h3 class="name-header">Daniel Wilson</h3>
-                        <p class="work-position">
-                            UI Designer
-                        </p>
+                        <div class="portfolio-item">
+                            <h3 class="name-header">Daniel Wilson</h3>
+                            <p class="work-position">
+                                UI Designer
+                            </p>
+                        </div>
                     </li>
                 </ul>
             </div>
