--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                     </li>
                 </ul>
                 <ul class="portfolio-types list">
-                    <li>
+                    <li class="portfolio-list">
                         <a class="link" href="./images/projectscard/bank.jpg">
                             <img src="./images/projectscard/bank.jpg" alt="Banking App Interface Concept" width="360">
                             <div class="portfolio-item">
@@ -77,7 +77,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="portfolio-list">
                         <a class="link" href="./images/projectscard/qr.jpg">
                             <img src="./images/projectscard/qr.jpg" alt="procces of payment" width="360">
                             <div class="portfolio-item">
@@ -88,7 +88,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="portfolio-list">
                         <a class="link" href="./images/projectscard/meditation-app.jpg">
                             <img src="./images/projectscard/meditation-app.jpg" alt="notebook+meditation-app"
                                 width="360">
@@ -100,7 +100,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="portfolio-list">
                         <a class="link" href="./images/projectscard/taxi-services.jpg">
                             <img src="./images/projectscard/taxi-services.jpg" alt="driving car" width="360">
                             <div class="portfolio-item">
@@ -112,7 +112,7 @@
                         </a>
 
                     </li>
-                    <li>
+                    <li class="portfolio-list">
                         <a class="link" href="./images/projectscard/phone-wallpapers.jpg">
                             <img src="./images/projectscard/phone-wallpapers.jpg" alt="screen illustrations"
                                 width="360">
@@ -124,7 +124,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="portfolio-list">
                         <a class="link" href="./images/projectscard/courses.jpg">
                             <img src="./images/projectscard/courses.jpg" alt="happy girl" width="360">
                             <div class="portfolio-item">
@@ -135,7 +135,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="portfolio-list">
                         <a class="link" href="./images/projectscard/insta-stories.jpg">
                             <img src="./images/projectscard/insta-stories.jpg" alt="instagram stories concept"
                                 width="360">
@@ -147,7 +147,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="portfolio-list">
                         <a class="link" href="./images/projectscard/food.jpg">
                             <img src="./images/projectscard/food.jpg" alt="woman with food in bag" width="360">
                             <div class="portfolio-item">
@@ -158,7 +158,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="portfolio-list">
                         <a class="link" href="./images/projectscard/coffee.jpg">
                             <img src="./images/projectscard/coffee.jpg" alt="proccess of making coffee" width="360">
                             <div class="portfolio-item">
