--- a/index.html
+++ b/index.html
@@ -115,42 +115,42 @@
                 <h2 class="team-header">Our Team</h2>
                 <ul class="team-container list">
                     <li class="personal-item">
-                        <div class="personal-container">
-                            <img src="./images/ourteam/mark.jpg" alt="Mark Guerrero" width="264" />
-                            <h3 class="name-header">Mark Guerrero</h3>
-                            <p class="work-position">
-                                Product Designer
-                            </p>
-                        </div>
-                    </li>
-                    <li class="personal-item">
-                        <img src="./images/ourteam/tom.jpg" alt="Tom Ford" width="264" />
-                        <div class="position-item">
-                            <h3 class="name-header">Tom Ford</h3>
-                            <p class="work-position">
-                                Frontend Developer
-                            </p>
-                        </div>
-                    </li>
-                    <li class="personal-item">
-                        <img src="./images/ourteam/camila.jpg" alt="Camila Garcia" width="264" />
-                        <div class="position-item">
-                            <h3 class="name-header">Camila Garcia</h3>
-                            <p class="work-position">
-                                Marketing
-                            </p>
-                        </div>
-                    </li>
-                    <li class="personal-item">
-                        <img src="./images/ourteam/daniel.jpg" alt="Daniel Wilson" width="264" />
-                        <div class="portfolio-item">
-                            <h3 class="name-header">Daniel Wilson</h3>
-                            <p class="work-position">
-                                UI Designer
-                            </p>
-                        </div>
-                    </li>
-                </ul>
+                        <img src="./images/ourteam/mark.jpg" alt="Mark Guerrero" width="264" />
+                        <div class="personal-container"></div>
+                        <h3 class="name-header">Mark Guerrero</h3>
+                        <p class="work-position">
+                            Product Designer
+                        </p>
+            </div>
+            </li>
+            <li class="personal-item">
+                <img src="./images/ourteam/tom.jpg" alt="Tom Ford" width="264" />
+                <div class="position-item">
+                    <h3 class="name-header">Tom Ford</h3>
+                    <p class="work-position">
+                        Frontend Developer
+                    </p>
+                </div>
+            </li>
+            <li class="personal-item">
+                <img src="./images/ourteam/camila.jpg" alt="Camila Garcia" width="264" />
+                <div class="position-item">
+                    <h3 class="name-header">Camila Garcia</h3>
+                    <p class="work-position">
+                        Marketing
+                    </p>
+                </div>
+            </li>
+            <li class="personal-item">
+                <img src="./images/ourteam/daniel.jpg" alt="Daniel Wilson" width="264" />
+                <div class="portfolio-item">
+                    <h3 class="name-header">Daniel Wilson</h3>
+                    <p class="work-position">
+                        UI Designer
+                    </p>
+                </div>
+            </li>
+            </ul>
             </div>
         </section>
     </main>
