--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </li>
                     <li class="personal-item">
                         <img src="./images/ourteam/tom.jpg" alt="Tom Ford" width="264" />
-                        <div class="position-item">
+                        <div class="personal-container">
                             <h3 class="name-header">Tom Ford</h3>
                             <p class="work-position">
                                 Frontend Developer
@@ -134,7 +134,7 @@
                     </li>
                     <li class="personal-item">
                         <img src="./images/ourteam/camila.jpg" alt="Camila Garcia" width="264" />
-                        <div class="position-item">
+                        <div class="personal-container">
                             <h3 class="name-header">Camila Garcia</h3>
                             <p class="work-position">
                                 Marketing
@@ -143,7 +143,7 @@
                     </li>
                     <li class="personal-item">
                         <img src="./images/ourteam/daniel.jpg" alt="Daniel Wilson" width="264" />
-                        <div class="portfolio-item">
+                        <div class="personal-container">
                             <h3 class="name-header">Daniel Wilson</h3>
                             <p class="work-position">
                                 UI Designer
