--- a/portfolio.html
+++ b/portfolio.html
@@ -175,10 +175,12 @@
     </main>
     <!-- footer section -->
     <footer class="footer-item">
-        <a class="header-logo link" href="index.html">Web<span class="header-span-logo">Studio</span></a>
-        <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+        <div class="container">
+            <a class="header-logo link" href="index.html">Web<span class="header-span-logo">Studio</span></a>
+            <p class="footer-text">
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
+        </div>
     </footer>
 
 </body>
